Add serde feature flag
Having a serde feature flag allows
enabling optional serde suport for dependencies. Right now it only
enables the serde flag for the uuid crate
so its not super annoying to work with #[derive(Serialize)] on structs
containing uuids

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,3 +163,4 @@ sql-browser-tokio = ["tokio", "tokio-util"]
 sql-browser-smol = ["async-io", "async-net", "futures-lite"]
 integrated-auth-gssapi = ["libgssapi"]
 bigdecimal = [ "bigdecimal_"]
+serde = ["uuid/serde"]
